--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Jardel Gonçalves</a>.
+      Coded by <a href="https://github.com/jardelgoncalves">Jardel Gonçalves</a>.
     </div>
   </main>
 
