refactor: change class and color contrast

--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -12,16 +12,18 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main class="container">
-    <div class="card">
-      <img class="card__image" loading="lazy" src="./images//image-qr-code.png" alt="QR Code">
-      <h1 class="card__title">
-        Improve your front-end skills by building projects
-      </h1>
-      <p class="card__description">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
-    </div>
+  <main>
+    <section class="card-wrapper">
+      <div class="card">
+        <img class="card__image" loading="lazy" src="./images//image-qr-code.png" alt="QR Code">
+        <h1 class="card__title">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="card__description">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
+    </section>
   </main>
 
 </body>
